[gd_scene load_steps=4 format=3 uid="uid://bi6ar1fa5ac45"]

[ext_resource type="Script" uid="uid://cg0nd75fcj0ly" path="res://scenes/item.gd" id="1_s8enn"]
[ext_resource type="Texture2D" uid="uid://5rejvdbbdjxi" path="res://assets/objects/Colored/genericItem_color_009.png" id="2_s8enn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8enn"]
size = Vector2(119, 154)

[node name="Item" type="Area2D"]
script = ExtResource("1_s8enn")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1190, 914)
texture = ExtResource("2_s8enn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_s8enn")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
